fixed spacing

--- a/client/src/styles/balance.scss
+++ b/client/src/styles/balance.scss
@@ -3,14 +3,21 @@
   margin: auto;
   padding: 0.8rem;
   
+  h3 {
+    margin-top: 4rem;
+    margin-bottom: 0;
+  }
+
   h4 {
     font-size: 1rem;
     margin: 0;
     font-weight: normal;
   }
+
   h2 {
     margin-bottom: 0;
   }
+
   
   .users {
     width: 100%;
